<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".PrediccionCortoPlazoActivity" >

    <Spinner
        android:id="@+id/provinciasCortoPlazo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/ayuntamientosCortoPlazo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/fecha"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/rotulo_tamano_letra" />

    <TextView
        android:id="@+id/fechaCortoPlazo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/valor_tamano_texto" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >
    
        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/temperaturas"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/rotulo_tamano_letra" />

        </TableRow>
        
        
        <TableRow>

             <TextView
                 android:id="@+id/textView21"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="@string/maxima"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textSize="@dimen/rotulo_tamano_letra" />
             
             <TextView
                 android:id="@+id/textView22"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="@string/minima"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textSize="@dimen/rotulo_tamano_letra" />

        </TableRow>
        
        <TableRow>

            <TextView
                android:id="@+id/temperaturaMaxima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/valor_tamano_texto" />

           <TextView
               android:id="@+id/temperaturaMinima"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Large Text"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:textSize="@dimen/valor_tamano_texto" />
              
         </TableRow>
    </TableLayout>

     <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/estadoCielo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/rotulo_tamano_letra" />

            <ImageView
                android:id="@+id/estadoCieloMorning"
                android:layout_width="@dimen/icona_estado_ancho"
                android:layout_height="@dimen/icona_estado_alto"
                android:src="@drawable/guion" />
            
            <ImageView
                android:id="@+id/estadoCieloTarde"
                android:layout_width="@dimen/icona_estado_ancho"
                android:layout_height="@dimen/icona_estado_alto"
                android:src="@drawable/guion" />
            
            <ImageView
                android:id="@+id/estadoCieloNoche"
                android:layout_width="@dimen/icona_estado_ancho"
                android:layout_height="@dimen/icona_estado_alto"
                android:src="@drawable/guion" />

        </TableRow>

        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/viento"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/rotulo_tamano_letra" />

            <ImageView
                android:id="@+id/vientoMorning"
                android:layout_width="@dimen/icona_estado_ancho"
                android:layout_height="@dimen/icona_estado_alto"
                android:src="@drawable/guion" />
            
            <ImageView
                android:id="@+id/vientoTarde"
                android:layout_width="@dimen/icona_estado_ancho"
                android:layout_height="@dimen/icona_estado_alto"
                android:src="@drawable/guion" />
            
            <ImageView
                android:id="@+id/vientoNoche"
                android:layout_width="@dimen/icona_estado_ancho"
                android:layout_height="@dimen/icona_estado_alto"
                android:src="@drawable/guion" />

        </TableRow>
    </TableLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="bottom" >

         <Button
             android:id="@+id/diaAnterior"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/btn_dia_anterior_rotulo" />

         <Button
             android:id="@+id/diaSiguiente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
             android:layout_weight="1"
             android:text="@string/btn_dia_siguiente_rotulo" />

     </LinearLayout>

</LinearLayout>
