<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Spinner
        android:id="@+id/provincias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/estaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacion_vertical_grupo"
        tools:text="@string/horaUTC"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/rotulo_tamano_letra" />

    <TextView
        android:id="@+id/horaUTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="00:00:00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/valor_tamano_texto" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacion_vertical_grupo"
        android:text="@string/horaLocal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/rotulo_tamano_letra" />

    <TextView
        android:id="@+id/horaLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="00:00:00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/valor_tamano_texto" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacion_vertical_grupo" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/rotulo_marxe_dereito"
                android:text="@string/temperatura"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/rotulo_tamano_letra" />

            <TextView
                android:id="@+id/temperatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12º"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/valor_tamano_texto" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/rotulo_marxe_dereito"
                android:text="@string/sensacionTermica"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/rotulo_tamano_letra" />

            <TextView
                android:id="@+id/sensacionTermica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10º"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/valor_tamano_texto" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacion_vertical_grupo" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/rotulo_marxe_dereito"
                android:text="@string/estadoCielo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/rotulo_tamano_letra" />

            <ImageView
                android:id="@+id/estadoCielo"
                android:layout_width="@dimen/icona_estado_ancho"
                android:layout_height="@dimen/icona_estado_alto"
                android:src="@drawable/guion" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/rotulo_marxe_dereito"
                android:text="@string/tendenciaTemperatura"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/rotulo_tamano_letra" />

            <ImageView
                android:id="@+id/tendenciaTemperatura"
                android:layout_width="@dimen/icona_estado_ancho"
                android:layout_height="@dimen/icona_estado_alto"
                android:src="@drawable/guion" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/rotulo_marxe_dereito"
                android:text="@string/viento"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/rotulo_tamano_letra" />

            <ImageView
                android:id="@+id/viento"
                android:layout_width="@dimen/icona_estado_ancho"
                android:layout_height="@dimen/icona_estado_alto"
                android:src="@drawable/guion" />

        </TableRow>
    </TableLayout>

</LinearLayout>
